# movie-db-random

./: .gitignore  CMakeLists.txt  README.md
include/controllers/: moviecontroller.h
include/menu/: menu.h  option.h
include/model/: moviemodel.h  movierecord.h
include/util/: filehandler.h  text.h
include/view/: input.h  output.h
src/: CMakeLists.txt  main.cpp
src/controllers/: moviecontroller.cpp
src/menu/: menu.cpp  option.cpp
src/model/: moviemodel.cpp  movierecord.cpp
src/util/: filehandler.cpp  text.cpp
src/view/: input.cpp  output.cpp
